--- a/.gitignore
+++ b/.gitignore
@@ -16,8 +16,11 @@ build
 .env.development.local
 .env.test.local
 .env.production.local
-todo.js
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+
+todo.js
+src/components/Profile.js
