--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "fictoan-react": "^0.41.18",
     "moment": "^2.29.1",
+    "polished": "^4.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
@@ -15,6 +17,8 @@
     "react-scripts": "4.0.3",
     "react-toastify": "^7.0.4",
     "socket.io-client": "^4.1.2",
+    "styled-components": "^5.3.5",
+    "typescript": "^4.7.3",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
